tests/NormalTests/paczka1/small_fuzzy/18146516.err
Error in line 5: cZxWq9sCs A985 47,3
Error in line 10: nmzN A343 12,1
Error in line 11: nmzN A985 95,4
Error in line 9: S952 A343 44,9
